--- a/app/src/main/res/layout/activity_roo.xml
+++ b/app/src/main/res/layout/activity_roo.xml
@@ -7,39 +7,309 @@
     android:background="@drawable/back"
     tools:context=".RooActivity">
 
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_marginTop="50dp"
+        android:layout_width="match_parent"
+        android:layout_height="67dp"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:background="@drawable/useru"
+        android:layout_marginLeft="25dp"
+        android:layout_marginRight="25dp"
+        android:layout_marginBottom="20dp"
+        android:orientation="vertical"
+        android:id="@+id/item"
+        android:visibility="visible"
+        android:padding="6dp">
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/circleImageView2"
+            android:layout_width="81dp"
+            android:layout_height="67dp"
+            android:layout_marginBottom="8dp"
 
-    <TextView
-        android:id="@+id/wait"
-        android:layout_width="300dp"
+            android:layout_marginTop="8dp"
+            android:src="@drawable/userphoto"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            />
+
+        <TextView
+            android:id="@+id/UserName_connected"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="8dp"
+            android:fontFamily="@font/montserrat"
+            android:text="UserName"
+            android:textColor="#003366"
+            android:textSize="14sp"
+            android:textStyle="bold"
+            android:layout_toRightOf="@+id/circleImageView2"
+            android:layout_marginLeft="10dp"
+            android:layout_centerVertical="true"
+            />
+
+        <ImageView
+            android:id="@+id/invite"
+            android:layout_width="90dp"
+            android:layout_height="30dp"
+            android:src="@drawable/green"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginEnd="20dp"
+            android:layout_marginRight="20dp"
+            >
+
+        </ImageView>
+
+
+    </RelativeLayout>
+
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_below="@+id/item"
+        android:layout_width="match_parent"
+        android:layout_height="67dp"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:background="@drawable/useru"
+        android:layout_marginLeft="25dp"
+        android:layout_marginRight="25dp"
+        android:layout_marginBottom="20dp"
+        android:orientation="vertical"
+        android:id="@+id/item2"
+        android:visibility="visible"
+        android:padding="6dp">
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/circleImageView21"
+            android:layout_width="81dp"
+            android:layout_height="67dp"
+            android:layout_marginBottom="8dp"
+
+            android:layout_marginTop="8dp"
+            android:src="@drawable/userphoto"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            />
+
+        <TextView
+            android:id="@+id/UserName_connected1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="8dp"
+            android:fontFamily="@font/montserrat"
+            android:text="UserName"
+            android:textColor="#003366"
+            android:textSize="14sp"
+            android:textStyle="bold"
+            android:layout_toRightOf="@+id/circleImageView21"
+            android:layout_marginLeft="10dp"
+            android:layout_centerVertical="true"
+            />
+
+        <ImageView
+            android:id="@+id/invite1"
+            android:layout_width="90dp"
+            android:layout_height="30dp"
+            android:src="@drawable/green"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginEnd="20dp"
+            android:layout_marginRight="20dp"
+            >
+
+        </ImageView>
+
+
+    </RelativeLayout>
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_below="@+id/item2"
+        android:layout_width="match_parent"
+        android:layout_height="67dp"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:background="@drawable/useru"
+        android:layout_marginLeft="25dp"
+        android:layout_marginRight="25dp"
+        android:layout_marginBottom="20dp"
+        android:orientation="vertical"
+        android:id="@+id/item22"
+        android:padding="6dp"
+        android:visibility="visible">
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/circleImageView22"
+            android:layout_width="81dp"
+            android:layout_height="67dp"
+            android:layout_marginBottom="8dp"
+
+            android:layout_marginTop="8dp"
+            android:src="@drawable/userphoto"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            />
+
+        <TextView
+            android:id="@+id/UserName_connected2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="8dp"
+            android:fontFamily="@font/montserrat"
+            android:text="UserName"
+            android:textColor="#003366"
+            android:textSize="14sp"
+            android:textStyle="bold"
+            android:layout_toRightOf="@+id/circleImageView22"
+            android:layout_marginLeft="10dp"
+            android:layout_centerVertical="true"
+            />
+
+        <ImageView
+            android:id="@+id/invite2"
+            android:layout_width="90dp"
+            android:layout_height="30dp"
+            android:src="@drawable/green"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginEnd="20dp"
+            android:layout_marginRight="20dp"
+            >
+
+        </ImageView>
+
+
+    </RelativeLayout>
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_below="@+id/item22"
+        android:layout_width="match_parent"
+        android:layout_height="67dp"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:background="@drawable/useru"
+        android:layout_marginLeft="25dp"
+        android:layout_marginRight="25dp"
+        android:layout_marginBottom="20dp"
+        android:orientation="vertical"
+        android:visibility="visible"
+        android:id="@+id/item3"
+        android:padding="6dp">
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/circleImageView222"
+            android:layout_width="81dp"
+            android:layout_height="67dp"
+            android:layout_marginBottom="8dp"
+
+            android:layout_marginTop="8dp"
+            android:src="@drawable/userphoto"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            />
+
+        <TextView
+            android:id="@+id/UserName_connected3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="8dp"
+            android:fontFamily="@font/montserrat"
+            android:text="UserName"
+            android:textColor="#003366"
+            android:textSize="14sp"
+            android:textStyle="bold"
+            android:layout_toRightOf="@+id/circleImageView222"
+            android:layout_marginLeft="10dp"
+            android:layout_centerVertical="true"
+            />
+
+        <ImageView
+            android:id="@+id/invite3"
+            android:layout_width="90dp"
+            android:layout_height="30dp"
+            android:src="@drawable/green"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginEnd="20dp"
+            android:layout_marginRight="20dp"
+            >
+
+        </ImageView>
+
+
+    </RelativeLayout>
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_below="@+id/item3"
+        android:layout_width="match_parent"
+        android:layout_height="67dp"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:background="@drawable/useru"
+        android:layout_marginLeft="25dp"
+        android:layout_marginRight="25dp"
+        android:layout_marginBottom="20dp"
+        android:orientation="vertical"
+        android:id="@+id/item4"
+        android:visibility="visible"
+        android:padding="6dp">
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/circleImageView2222"
+            android:layout_width="81dp"
+            android:layout_height="67dp"
+            android:layout_marginBottom="8dp"
+
+            android:layout_marginTop="8dp"
+            android:src="@drawable/userphoto"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            />
+
+        <TextView
+            android:id="@+id/UserName_connected4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="8dp"
+            android:fontFamily="@font/montserrat"
+            android:text="UserName"
+            android:textColor="#003366"
+            android:textSize="14sp"
+            android:textStyle="bold"
+            android:layout_toRightOf="@+id/circleImageView2222"
+            android:layout_marginLeft="10dp"
+            android:layout_centerVertical="true"
+            />
+
+        <ImageView
+            android:id="@+id/invite4"
+            android:layout_width="90dp"
+            android:layout_height="30dp"
+            android:src="@drawable/green"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginEnd="20dp"
+            android:layout_marginRight="20dp"
+            >
+
+        </ImageView>
+
+
+    </RelativeLayout>
+
+    <Button
+        android:id="@+id/ready"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:fontFamily="@font/montserrat"
-        android:textSize="30dp"
-        android:textAlignment="center"
-        android:visibility="visible"
-        android:text="Waiting for all players to join"
-        android:gravity="center_horizontal">
+        android:layout_below="@+id/item4"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/cornerbutton1"
+        android:text="Start"
+        android:textColor="@color/colorWhite">
 
-    </TextView>
-
-    <ImageView
-        android:id="@+id/cercle"
-        android:layout_width="match_parent"
-        android:layout_height="105dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:visibility="visible"
-        android:layout_marginLeft="0dp"
-        android:src="@drawable/oans"></ImageView>
-    <ImageView
-        android:id="@+id/cercle2"
-        android:layout_width="match_parent"
-        android:layout_height="105dp"
-        android:layout_alignParentLeft="true"
-        android:layout_marginTop="100dp"
-        android:visibility="visible"
-        android:layout_marginLeft="0dp"
-        android:src="@drawable/oans"></ImageView>
-
+    </Button>
 
 </RelativeLayout>
