--- a/app/src/main/res/layout/activity_test_game.xml
+++ b/app/src/main/res/layout/activity_test_game.xml
@@ -20,7 +20,7 @@
         android:id="@+id/ready"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:text="Ready Up"
+        android:text="Start"
         android:layout_marginTop="10dp"
         android:layout_below="@+id/recyclerConnectedUsers"
         android:layout_centerHorizontal="true"
