--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -7,7 +7,7 @@
     android:background="@drawable/back"
     android:gravity="center"
     android:padding="16dp"
-    tools:context=".HomeActivity">
+    tools:context=".Intro.HomeActivity">
 
 
     <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
