--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,6 @@
 
 
     <color name="tab_indicator_gray">#c0c0c0</color>
-    <color name="intro_title_color">#000000</color>
+    <color name="black_color">#000000</color>
     <color name="intro_description_color">#656565</color>
 </resources>
