--- a/app/src/main/res/layout/row_groupchat_right.xml
+++ b/app/src/main/res/layout/row_groupchat_right.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/bt_blanc2"
+    android:background="@drawable/bt_blanc"
     android:layout_marginStart="100dp"
     android:layout_marginTop="10dp"
     android:padding="10dp"
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:text="Name"
         android:fontFamily="@font/montserrat"
-        android:textColor="@color/colorWhite"
+        android:textColor="@color/colorPrimary"
         android:textStyle="bold"
         android:layout_marginStart="5dp"></TextView>
     <TextView
@@ -36,7 +36,5 @@
         android:fontFamily="@font/montserrat"
         android:layout_below="@+id/messageTv"
         android:textSize="12sp"
-        android:textColor="@color/colorWhite"
-
         android:layout_marginEnd="5dp"></TextView>
 </RelativeLayout>
