--- a/app/src/main/res/drawable-v21/nav.xml
+++ b/app/src/main/res/drawable-v21/nav.xml
@@ -5,5 +5,5 @@
         android:radius="2dp"/>
     <stroke android:color="#003366" android:width="1dp"/>
 
-    <solid android:color="@android:color/transparent"  />
+    <solid android:color="@color/colorWhite"  />
 </shape>
