--- a/app/src/main/res/drawable/relative0.xml
+++ b/app/src/main/res/drawable/relative0.xml
@@ -2,9 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:startColor="#FFFF"
-        android:endColor="#FFFF"
+        android:startColor="#B06AB3"
+        android:endColor="#4568DC"
         android:angle="90"/>
     <corners
-        android:radius="0dp"/>
+        android:radius="15dp"/>
 </shape>
