--- a/app/src/main/res/layout/activity_welcome_home.xml
+++ b/app/src/main/res/layout/activity_welcome_home.xml
@@ -5,49 +5,230 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Menu.WelcomeHomeActivity"
-    android:background="@drawable/back"
+
     >
-
-
-
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true">
-        <ImageView
-            android:id="@+id/introduction"
-            android:layout_width="wrap_content"
-            android:layout_height="130dp"
-            android:layout_marginTop="25dp"
-            android:src="@drawable/intro5"></ImageView>
-
-        <ImageView
-            android:id="@+id/worksho"
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/colorWhite"
+        android:layout_above="@id/bottom_nav">
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="130dp"
-            android:layout_below="@+id/introduction"
-            android:layout_marginTop="10dp"
-            android:src="@drawable/worksho1"></ImageView>
-        <ImageView
-            android:id="@+id/hel"
-            android:layout_width="match_parent"
-            android:layout_height="130dp"
-            android:layout_marginTop="10dp"
-            android:layout_below="@+id/worksho"
-            android:src="@drawable/hel11"></ImageView>
-        <ImageView
-            android:id="@+id/constribute"
-            android:layout_width="match_parent"
-            android:layout_height="130dp"
-            android:layout_below="@+id/hel"
-            android:layout_marginTop="10dp"
+            android:layout_height="match_parent">
 
-            android:src="@drawable/constr1"></ImageView>
+            <RelativeLayout
+                android:id="@+id/me"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="140dp"
+                android:background="@drawable/imagea">
+                <TextView
+                    android:layout_marginTop="15dp"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:id="@+id/tx1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Welcome Home,"
+                    android:textSize="20dp"
+                    android:fontFamily="@font/montserrat"
+                    android:textStyle="bold"
+                    android:textAlignment="center"
+                    >
+                </TextView>
+                <TextView
+                    android:layout_marginTop="15dp"
+                    android:id="@+id/tx3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Muhamed"
+                    android:textSize="20dp"
+                    android:fontFamily="@font/montserrat"
+                    android:textStyle="bold"
+                    android:textColor="@color/black_color"
+
+                    android:textAlignment="center"
+                    android:layout_toRightOf="@+id/tx1"
+                    >
+                </TextView>
 
 
-    </RelativeLayout>
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_below="@+id/me"
+                android:id="@+id/Relative1"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="0dp"
+                android:layout_marginEnd="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="70dp"
+                >
+
+                <ImageView
+                    android:id="@+id/bar"
+                    android:layout_width="32dp"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/im1"></ImageView>
+                <TextView
+                    android:layout_marginTop="10dp"
+                    android:layout_marginStart="5dp"
+                    android:id="@+id/tx"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Phase 1"
+                    android:textSize="20dp"
+                    android:fontFamily="@font/montserrat"
+                    android:textStyle="bold"
+                    android:textAlignment="center"
+                    android:layout_toRightOf="@+id/bar"></TextView>
+                <TextView
+                    android:layout_marginTop="1dp"
+                    android:layout_marginStart="5dp"
+                    android:id="@+id/txx"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Select what you want to do"
+                    android:textSize="15dp"
+                    android:fontFamily="@font/montserrat"
+                    android:textStyle="normal"
+                    android:textAlignment="center"
+                    android:layout_below="@+id/tx"
+                    android:layout_toRightOf="@+id/bar"></TextView>
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/aaa"
+                android:layout_below="@id/Relative1"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="140dp"
+                android:background="@drawable/relative1">
+
+                <TextView
+                    android:id="@+id/txr"
+                    android:layout_width="205dp"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginStart="150dp"
+                    android:layout_marginEnd="5dp"
+                    android:fontFamily="@font/montserrat"
+                    android:text="Start with simple
+                    yes or no questions to get into design thinking process"
+                    android:textAlignment="center"
+                    android:textColor="@color/colorWhite"
+                    android:textSize="16dp"
+                    android:textStyle="bold" />
+            <ImageView
+                android:layout_alignParentStart="true"
+                android:id="@+id/introduction"
+                android:layout_width="150dp"
+                android:layout_height="match_parent"
+                android:src="@drawable/ideation"></ImageView>
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/aaa2"
+                android:layout_below="@id/aaa"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="140dp"
+                android:background="@drawable/relativee">
+
+                <TextView
+                    android:id="@+id/txrr"
+                    android:layout_width="205dp"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentStart="true"
+                    android:fontFamily="@font/montserrat"
+                    android:text="Let's Try and figure it out
+  Invite friends and start the workshop"
+                    android:textAlignment="center"
+                    android:textColor="@color/colorWhite"
+                    android:textSize="16dp"
+                    android:textStyle="bold" />
+                <ImageView
+                    android:layout_alignParentEnd="true"
+                    android:id="@+id/worksho"
+                    android:layout_width="150dp"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/img1"></ImageView>
+            </RelativeLayout>
+            <RelativeLayout
+                android:id="@+id/aaa3"
+                android:layout_below="@id/aaa2"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="140dp"
+                android:background="@drawable/reaat">
+                <TextView
+                    android:id="@+id/txrrr"
+                    android:layout_width="205dp"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginStart="150dp"
+                    android:layout_marginEnd="5dp"
+                    android:fontFamily="@font/montserrat"
+                    android:text="You need help ?
+        Tutor and Session manager are here to help you"
+                    android:textAlignment="center"
+                    android:textColor="@color/colorWhite"
+                    android:textSize="16dp"
+                    android:textStyle="bold" />
+                <ImageView
+                    android:layout_alignParentStart="true"
+                    android:id="@+id/hel"
+                    android:layout_width="150dp"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/rod"></ImageView>
+
+            </RelativeLayout>
+            <RelativeLayout
+                android:id="@+id/aaa4"
+                android:layout_below="@id/aaa3"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="140dp"
+                android:background="@drawable/ekhrr">
+
+                <TextView
+                    android:id="@+id/txr2"
+                    android:layout_width="205dp"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentStart="true"
+                    android:fontFamily="@font/montserrat"
+                    android:text="Join the Global BrainStorming and Discuss ideas"
+                    android:textAlignment="center"
+                    android:textColor="@color/colorWhite"
+                    android:textSize="16dp"
+                    android:textStyle="bold" />
+                <ImageView
+                    android:layout_alignParentEnd="true"
+                    android:id="@+id/constribute"
+                    android:layout_width="150dp"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/img2"></ImageView>
+            </RelativeLayout>
 
 
+        </RelativeLayout>
+    </ScrollView>
 
 
 
