--- a/app/src/main/res/layout/activity_workshop.xml
+++ b/app/src/main/res/layout/activity_workshop.xml
@@ -5,24 +5,123 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".WorkshopActivity"
-    android:background="@drawable/back">
+    >
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_above="@+id/bottom_nav"
+    android:background="@color/colorWhite"
+   >
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    >
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/listgames"
+
+    <RelativeLayout
+        android:id="@+id/Relative1"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginEnd="10dp"
         android:layout_width="match_parent"
-        android:layout_height="635dp"
-     ></androidx.recyclerview.widget.RecyclerView>
+        android:layout_height="70dp"
+        >
+
+        <ImageView
+            android:id="@+id/bar"
+            android:layout_width="32dp"
+            android:layout_height="match_parent"
+            android:src="@drawable/im1"></ImageView>
+        <TextView
+            android:layout_marginTop="10dp"
+            android:layout_marginStart="5dp"
+            android:id="@+id/tx"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Room Managment "
+            android:textSize="20dp"
+            android:fontFamily="@font/montserrat"
+            android:textStyle="bold"
+            android:textAlignment="center"
+            android:layout_toRightOf="@+id/bar"></TextView>
+        <TextView
+            android:layout_marginTop="1dp"
+            android:layout_marginStart="5dp"
+            android:id="@+id/txx"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Create Or Join an Existing room"
+            android:textSize="15dp"
+            android:fontFamily="@font/montserrat"
+            android:textStyle="normal"
+            android:textAlignment="center"
+            android:layout_below="@+id/tx"
+            android:layout_toRightOf="@+id/bar"></TextView>
+
+    </RelativeLayout>
+    <RelativeLayout
+        android:id="@+id/aaa"
+        android:layout_below="@id/Relative1"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        >
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/listgames"
+            android:layout_width="match_parent"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_height="match_parent"
+            tools:listitem="@layout/item_game"
+            ></androidx.recyclerview.widget.RecyclerView>
 
 
-    <Button
-        android:id="@+id/creategame"
-        android:layout_width="200dp"
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/aaa2"
+        android:layout_below="@id/aaa"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        >
+
+
+        <Button
+            android:id="@+id/creategame"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:textColor="@color/colorWhite"
+            android:background="@drawable/bt_back"
+            android:text="Create New Room"></Button>
+
+
+    </RelativeLayout>
+
+
+</RelativeLayout>
+
+</ScrollView>
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_nav"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="20dp"
-        android:background="@drawable/bt_back"
-        android:text="Create"></Button>
+        android:background="@drawable/concept"
+        app:itemTextColor="#5400E8"
+        app:menu="@menu/bottom_navigation">
+    </com.google.android.material.bottomnavigation.BottomNavigationView>
+
+
 
 
 
