--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -5,17 +5,17 @@
         android:title="Profile"
         android:icon="@drawable/ic_person_black_24dp"
         />
-    <item android:id="@+id/friendsmenu"
-        android:title="Friends"
-        android:icon="@drawable/ic_group_black_24dp"
+    <item android:id="@+id/gamesmenu"
+        android:title="Achivements"
+        android:icon="@drawable/ic_star_black_24dp"
         />
     <item android:id="@+id/homemenu"
         android:title="Home"
-        android:icon="@drawable/ic_home_black_24dp"
+        android:icon="@drawable/ic_blur_on_black_24dp"
         />
-    <item android:id="@+id/gamesmenu"
-        android:title="Games"
-        android:icon="@drawable/ic_games_black_24dp"
+    <item android:id="@+id/friendsmenu"
+        android:title="Community"
+        android:icon="@drawable/ic_group_black_24dp"
         />
     <item
         android:id="@+id/notificationsmenu"
