--- a/app/src/main/res/layout/activity_friends.xml
+++ b/app/src/main/res/layout/activity_friends.xml
@@ -4,18 +4,119 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Menu.FriendsActivity" android:background="@drawable/back">
+    tools:context=".Menu.FriendsActivity"
+    >
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/bottom_nav"
+        android:background="@color/colorWhite"
+        >
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            >
+
+
+            <RelativeLayout
+                android:id="@+id/Relative1"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="0dp"
+                android:layout_marginEnd="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="70dp"
+                >
+
+                <ImageView
+                    android:id="@+id/bar"
+                    android:layout_width="32dp"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/im1"></ImageView>
+                <TextView
+                    android:layout_marginTop="10dp"
+                    android:layout_marginStart="5dp"
+                    android:id="@+id/tx"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Community"
+                    android:textSize="20dp"
+                    android:fontFamily="@font/montserrat"
+                    android:textStyle="bold"
+                    android:textAlignment="center"
+                    android:layout_toRightOf="@+id/bar"></TextView>
+                <TextView
+                    android:layout_marginTop="1dp"
+                    android:layout_marginStart="5dp"
+                    android:id="@+id/txx"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="All users"
+                    android:textSize="15dp"
+                    android:fontFamily="@font/montserrat"
+                    android:textStyle="normal"
+                    android:textAlignment="center"
+                    android:layout_below="@+id/tx"
+                    android:layout_toRightOf="@+id/bar"></TextView>
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/aaa"
+                android:layout_width="402dp"
+                android:layout_height="588dp"
+                android:layout_below="@id/Relative1"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp">
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recyclerConnectedUsers"
+                    android:layout_width="match_parent"
+                    tools:listitem="@layout/item_user"
+                    android:layout_height="match_parent"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentLeft="true">
+
+                </androidx.recyclerview.widget.RecyclerView>
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/aaa2"
+                android:layout_below="@id/aaa"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                >
+
+
+                <Button
+                    android:id="@+id/ready"
+                    android:layout_width="250dp"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"
+                    android:textColor="@color/colorWhite"
+                    android:background="@drawable/cornerbutton1"
+
+                    android:text="Before the  Workshop"></Button>
+
+
+            </RelativeLayout>
+
+
+        </RelativeLayout>
+
+    </ScrollView>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_nav"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_alignParentBottom="true"
-        android:background="@drawable/nav"
-        app:itemTextColor="#FFF"
-        app:menu="@menu/bottom_navigation"
-        >
-
+        android:background="@drawable/concept"
+        app:itemTextColor="#5400E8"
+        app:menu="@menu/bottom_navigation">
     </com.google.android.material.bottomnavigation.BottomNavigationView>
 
 </RelativeLayout>
