--- a/app/src/main/res/layout/activity_profile2.xml
+++ b/app/src/main/res/layout/activity_profile2.xml
@@ -5,81 +5,216 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Menu.ProfileActivity"
-    android:background="@drawable/back"
+
     >
-   <TextView
-       android:id="@+id/profiletxt"
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"
-       android:layout_alignParentTop="true"
-       android:text="Profile"
-       android:visibility="invisible"
-       android:textSize="30sp"
-       android:textStyle="bold"
-       android:textColor="#003366"
-       android:layout_centerHorizontal="true"
-       android:fontFamily="@font/montserrat">
-   </TextView>
+
+
+    <RelativeLayout
+        android:id="@+id/Relative1"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginEnd="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        >
+
+        <ImageView
+            android:id="@+id/bar"
+            android:layout_width="32dp"
+            android:layout_height="match_parent"
+            android:src="@drawable/im1"></ImageView>
+        <TextView
+            android:layout_marginTop="10dp"
+            android:layout_marginStart="5dp"
+            android:id="@+id/tx"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Profile "
+            android:textSize="20dp"
+            android:fontFamily="@font/montserrat"
+            android:textStyle="bold"
+            android:textAlignment="center"
+            android:layout_toRightOf="@+id/bar"></TextView>
+        <TextView
+            android:layout_marginTop="1dp"
+            android:layout_marginStart="5dp"
+            android:id="@+id/txx"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="here you can update your info"
+            android:textSize="15dp"
+            android:fontFamily="@font/montserrat"
+            android:textStyle="normal"
+            android:textAlignment="center"
+            android:layout_below="@+id/tx"
+            android:layout_toRightOf="@+id/bar"></TextView>
+
+    </RelativeLayout>
+
 
     <de.hdodenhof.circleimageview.CircleImageView
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/profile_photo"
-        android:layout_below="@+id/profiletxt"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="20dp"
         android:layout_width="250dp"
         android:layout_height="250dp"
         android:src="@drawable/profile"
-        app:civ_border_color="#FFF"
+        android:layout_below="@+id/Relative1"
+        app:civ_border_color="#FFEB3B"
         android:layout_centerHorizontal="true"
-        app:civ_border_width="3dp"/>
-<TextView
-    android:id="@+id/username_profile"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="UserName"
-    android:textSize="30sp"
-    android:textColor="#003366"
-    android:layout_centerHorizontal="true"
-    android:fontFamily="@font/montserrat"
-    android:layout_marginTop="50dp"
-    android:layout_below="@+id/profile_photo"></TextView>
-    <TextView
-        android:id="@+id/email_profile"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="User Email"
-        android:textSize="30sp"
-        android:textColor="#003366"
-        android:layout_centerHorizontal="true"
-        android:fontFamily="@font/montserrat"
-        android:layout_marginTop="20dp"
-        android:layout_below="@+id/username_profile"></TextView>
+        app:civ_border_width="5dp"/>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="90dp"
+        android:layout_below="@+id/profile_photo"
+        android:background="@drawable/roff">
+
+        <TextView
+            android:id="@+id/username_profile"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="UserName"
+            android:textSize="22sp"
+            android:textColor="#FFFF"
+            android:layout_marginTop="5dp"
+            android:textStyle="bold"
+            android:layout_centerHorizontal="true"
+            android:fontFamily="@font/montserrat"
+
+            ></TextView>
+        <TextView
+            android:id="@+id/usercity"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Tunisia"
+            android:textSize="18sp"
+            android:textColor="#FFFF"
+            android:textStyle="normal"
+            android:layout_below="@+id/username_profile"
+            android:layout_centerHorizontal="true"
+            android:fontFamily="@font/montserrat"
+
+            ></TextView>
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="73dp"
+        android:layout_above="@id/bottom_nav"
+        android:layout_below="@+id/profile_photo"
+        android:layout_marginTop="80dp"
+        android:background="@color/colorWhite">
+
+        <RelativeLayout
+            android:id="@+id/re1"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/bt_blanc2">
+
+        <ImageView
+            android:id="@+id/end"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginStart="5dp"
+
+            android:src="@drawable/ic_email_black_24dp"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true">
+        </ImageView>
+            <TextView
+
+                android:id="@+id/ennd"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=" | Email :"
+                android:textSize="18sp"
+                android:textColor="#05146A"
+                android:textStyle="normal"
+                android:layout_centerHorizontal="true"
+                android:fontFamily="@font/montserrat"
+                android:layout_centerVertical="true"
+                android:layout_toRightOf="@+id/end"></TextView>
+            <TextView
+                android:id="@+id/email_profile"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Muhamed.dhouibi@esprit.tn"
+                android:textSize="20sp"
+                android:textColor="#003366"
+                android:layout_marginStart="5dp"
+                android:layout_centerVertical="true"
+                android:layout_centerHorizontal="true"
+                android:fontFamily="@font/montserrat"
+                android:layout_toRightOf="@+id/ennd"
+                android:layout_marginTop="20dp"
+                ></TextView>
+
+        </RelativeLayout>
+        <RelativeLayout
+            android:id="@+id/re2"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/re1">
+
+            <Button
+                android:id="@+id/btupload"
+                android:layout_width="270dp"
+                android:layout_marginTop="20dp"
+                android:layout_height="wrap_content"
+                android:text="Select new Profile picture"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="10dp"
+                android:fontFamily="@font/montserrat"
+                android:background="@drawable/cornerbutton2">
+            </Button>
 
 
-    <Button
-        android:id="@+id/btlogout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="logout"
-        android:layout_centerHorizontal="true"
-        android:layout_above="@+id/bottom_nav"
-        android:layout_marginBottom="10dp"
-        android:fontFamily="@font/montserrat"
-        android:background="@drawable/cornerbutton2">
+            <Button
+                android:id="@+id/btlogout"
+                android:layout_width="270dp"
+                android:layout_height="wrap_content"
+                android:text="Verify Email"
+                android:layout_below="@+id/btupload"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="10dp"
+                android:fontFamily="@font/montserrat"
+                android:background="@drawable/cornerbutton2">
+            </Button>
+            <Button
+                android:id="@+id/bty"
+                android:layout_width="270dp"
+                android:layout_height="wrap_content"
+                android:text="logout"
+                android:layout_below="@+id/btlogout"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="10dp"
+                android:fontFamily="@font/montserrat"
+                android:background="@drawable/cornerbutton2">
+            </Button>
 
-    </Button>
+        </RelativeLayout>
+
+    </RelativeLayout>
+
+
+
+
+
+
+
 
 
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_nav"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_alignParentBottom="true"
-        android:background="@drawable/nav"
-        app:itemTextColor="#FFF"
-        app:menu="@menu/bottom_navigation"
-        >
+        android:background="@drawable/concept"
+        app:itemTextColor="#5400E8"
+        app:menu="@menu/bottom_navigation">
     </com.google.android.material.bottomnavigation.BottomNavigationView>
-
 </RelativeLayout>
