--- a/app/src/main/res/layout/item_notification.xml
+++ b/app/src/main/res/layout/item_notification.xml
@@ -5,9 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/calendar"
-    android:layout_marginLeft="25dp"
-    android:layout_marginRight="25dp"
+    android:layout_centerHorizontal="true"
     android:layout_marginBottom="20dp"
+    android:layout_marginStart="20dp"
+    android:layout_marginTop="10dp"
+    android:layout_marginEnd="20dp"
     android:orientation="vertical"
     android:id="@+id/item"
     android:padding="6dp">
@@ -63,11 +65,11 @@
         android:id="@+id/acc_invitation"
         android:layout_width="80dp"
         android:layout_height="30dp"
-        android:background="@drawable/cornerbutton2"
+        android:background="@drawable/cornerbutton1"
         android:fontFamily="@font/montserrat"
         android:text="Join"
         android:textAllCaps="false"
-        android:textColor="#003366"
+        android:textColor="#FFEB3B"
         android:textStyle="bold"
         android:layout_marginLeft="5dp"
 
@@ -80,11 +82,11 @@
         android:id="@+id/decline_invitation"
         android:layout_width="80dp"
         android:layout_height="30dp"
-        android:background="@drawable/cornerbutton2"
+        android:background="@drawable/cornerbutton1"
         android:fontFamily="@font/montserrat"
         android:text="Decline"
         android:textAllCaps="false"
-        android:textColor="#003366"
+        android:textColor="#FFEB3B"
         android:layout_marginLeft="10dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
