--- a/app/src/main/res/layout/activity_my_games.xml
+++ b/app/src/main/res/layout/activity_my_games.xml
@@ -38,7 +38,7 @@
                     android:id="@+id/tx"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Workshops "
+                    android:text="Achivements "
                     android:textSize="20dp"
                     android:fontFamily="@font/montserrat"
                     android:textStyle="bold"
@@ -50,7 +50,7 @@
                     android:id="@+id/txx"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Workshop you've been part of"
+                    android:text="Your Achivements List"
                     android:textSize="15dp"
                     android:fontFamily="@font/montserrat"
                     android:textStyle="normal"
