--- a/app/src/main/res/layout/activity_profile2.xml
+++ b/app/src/main/res/layout/activity_profile2.xml
@@ -141,8 +141,8 @@
                 android:id="@+id/email_profile"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Muhamed.dhouibi@esprit.tn"
-                android:textSize="20sp"
+                android:text="Muhamed.dhouibi@esprit.com"
+                android:textSize="18sp"
                 android:textColor="#003366"
                 android:layout_marginStart="5dp"
                 android:layout_centerVertical="true"
