--- a/app/src/main/res/layout/activity_test_swi.xml
+++ b/app/src/main/res/layout/activity_test_swi.xml
@@ -30,7 +30,7 @@
                     android:id="@+id/tx"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Room Managment "
+                    android:text="Step One"
                     android:textSize="20dp"
                     android:fontFamily="@font/montserrat"
                     android:textStyle="bold"
@@ -42,7 +42,7 @@
                     android:id="@+id/txx"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Create Or Join an Existing room"
+                    android:text="Instructions"
                     android:textSize="15dp"
                     android:fontFamily="@font/montserrat"
                     android:textStyle="normal"
