--- a/app/src/main/res/layout/row_groupchat_right.xml
+++ b/app/src/main/res/layout/row_groupchat_right.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/bt_blanc"
+    android:background="@drawable/bt_blanc2"
     android:layout_marginStart="100dp"
     android:layout_marginTop="10dp"
     android:padding="10dp"
