--- a/app/src/main/res/drawable/bt_blanc2.xml
+++ b/app/src/main/res/drawable/bt_blanc2.xml
@@ -2,9 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:startColor="#FFFF"
-        android:endColor="#FFFF"
-        android:angle="90"/>
+        android:startColor="#56CCF2"
+        android:endColor="#2F80ED"
+        android:angle="45"/>
     <corners
-        android:radius="0dp"/>
+        android:radius="25dp"/>
 </shape>
