--- a/app/src/main/res/layout/activity_chat_step.xml
+++ b/app/src/main/res/layout/activity_chat_step.xml
@@ -4,19 +4,63 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/back"
     tools:context=".ChatStepActivity">
+
+
+    <RelativeLayout
+        android:id="@+id/r5"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp">
+
+        <ImageView
+            android:id="@+id/bar"
+            android:layout_width="32dp"
+            android:layout_height="match_parent"
+            android:src="@drawable/im1"></ImageView>
+
+        <TextView
+            android:id="@+id/tx"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="10dp"
+            android:layout_toRightOf="@+id/bar"
+            android:fontFamily="@font/montserrat"
+            android:text="Step One "
+            android:textAlignment="center"
+            android:textColor="@color/black_color"
+            android:textSize="20dp"
+            android:textStyle="bold"></TextView>
+
+        <TextView
+            android:id="@+id/txx"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tx"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="1dp"
+            android:layout_toRightOf="@+id/bar"
+            android:fontFamily="@font/montserrat"
+            android:text="Discussion"
+            android:textSize="15dp"
+            android:textStyle="normal"></TextView>
+
+    </RelativeLayout>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/ChatRv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/chatlayout"
         app:stackFromEnd="true"
+        android:layout_below="@+id/r5"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         tools:listitem="@layout/row_groupchat_left">
 
     </androidx.recyclerview.widget.RecyclerView>
-
 
     <LinearLayout
         android:id="@+id/chatlayout"
