--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Intro.MainActivity"
-    android:background="@drawable/back">
+    >
 
     <de.hdodenhof.circleimageview.CircleImageView
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -100,6 +100,7 @@
 
     <ProgressBar
         android:id="@+id/regProgressBar"
+        android:layout_marginTop="50dp"
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_centerHorizontal="true"
