--- a/app/src/main/res/layout/layout_screen.xml
+++ b/app/src/main/res/layout/layout_screen.xml
@@ -5,7 +5,7 @@
     android:id="@+id/motification_background"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/back">
+    >
 
 
     <androidx.constraintlayout.widget.Guideline
@@ -27,7 +27,7 @@
         android:layout_marginBottom="8dp"
         android:fontFamily="@font/montserrat"
         android:text="TextView"
-        android:textColor="@color/black_color"
+        android:textColor="#06187A"
         android:textSize="32dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/guideline"
@@ -46,6 +46,7 @@
         android:layout_marginRight="32dp"
         android:layout_marginBottom="8dp"
         android:fontFamily="@font/montserrat"
+        android:textColor="#06187A"
         android:gravity="center_horizontal"
         android:lineSpacingExtra="16dp"
         android:text="TextView"
