--- a/app/src/main/res/drawable/cornerbutton3.xml
+++ b/app/src/main/res/drawable/cornerbutton3.xml
@@ -2,8 +2,8 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#FECC3D"/>
-            <stroke android:color="#003366" android:width="2dp" />
+            <solid android:color="#FFFF"/>
+            <stroke android:color="#003366" android:width="3dp" />
             <!--corners allow us to make the rounded corners button-->
             <corners android:radius="30dp" />
         </shape>
