--- a/app/src/main/res/layout/create_game_popup.xml
+++ b/app/src/main/res/layout/create_game_popup.xml
@@ -8,10 +8,7 @@
     android:layout_alignParentEnd="true"
     app:cardBackgroundColor="@color/colorWhite"
     android:layout_alignParentTop="true"
-    android:layout_marginStart="10dp"
-    android:layout_marginEnd="10dp"
     android:layout_gravity="center"
-
     >
 
 
@@ -20,9 +17,11 @@
 
     <RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="400dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
 
         >
 
@@ -31,15 +30,14 @@
             android:layout_width="match_parent"
             android:layout_height="90dp"
             android:layout_alignParentTop="true"
-            android:background="@drawable/sett">
+            android:background="@drawable/za">
             <ImageView
                 android:id="@+id/close"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
                 android:layout_marginEnd="7dp"
-                android:layout_marginTop="3dp"
+                android:layout_marginTop="7dp"
 
                 android:src="@drawable/ic_close_black_24dp" />
             <TextView
@@ -58,7 +56,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="70dp"
+            android:layout_marginTop="65dp"
             android:background="@color/colorWhite">
             <EditText
                 android:id="@+id/info1"
